[tool.poetry]
name = "aiagent"
version = "0.1.0"
description = "An ai agent example"
authors = ["Nick Dalalelis <nickthecloudguy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
